--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
-@import-normalize; /* bring in normalize.css styles */
-
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
